Safepoint ID is not consistent across event-based tracing events

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9
    • Component/s: hotspot
    • b31
    • generic
    • generic

      In safepoint.cpp, _safepoint_counter should be increased once in safepointSynchronize::end(). But it was increased in EventSafepointWaitBlocked and safepointSynchronize::end(). This results confusing safepoint id in JFR events: synch safepoint id = begin safepoint id +1.

            Assignee:
            Erik Gahlin
            Reporter:
            Jenny Zhang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: