8173917: Safepoint ID is not consistent across event-based tracing events

Reviewed-by: egahlin, mgronlun